--- a/event_management_frontend/src/Components/Footer.css
+++ b/event_management_frontend/src/Components/Footer.css
@@ -34,9 +34,9 @@
     color: white;
 }
 
-.footer-social-icons.img{
-    width: 40px;
-    margin-right: 15px;
+.footer-social-icons{
+    display: flex;
+    gap: 8px
 }
 
 .footer hr{
